--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
 sudo: required
 language: c
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-ocaml.sh
+install:
+  - wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-ocaml.sh
+matrix:
+  fast_finish: true
+  include:
+    - os: linux
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=parsing
+    - os: linux
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=round
+    - os: osx
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=parsing
+    - os: osx
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=round
+
 script:
   - bash -ex .travis-ocaml.sh
   - bash -ex ./tools/travis_ci_test.sh
-os:
-  - linux
-  - osx
-env:
-  - OCAML_VERSION=4.03 OPAM_VERSION=1.2.2
