--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,19 @@ matrix:
       env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=parsing
     - os: linux
       env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=round
+    - os: linux
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=mergeA
+    - os: linux
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=mergeB
+    - os: linux
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=mergeC
+    - os: linux
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=adjA
+
+    # At the moment bootstrapping OCaml on OSX takes too long, for the sake of
+    # simplicity just test compilation
     - os: osx
-      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=parsing
-    - os: osx
-      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2 TEST=round
+      env: OCAML_VERSION=4.03 OPAM_VERSION=1.2.2
 
 script:
   - bash -ex .travis-ocaml.sh
